fix: fix price tag z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -113,7 +113,7 @@
   font-size: 14px;
   font-weight: 600 !important;
   transition: padding 0.1s !important;
-  z-index: 51;
+  z-index: 49 !important;
 }
 
 .custom-marker:hover {
